About Page Draft

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="nav">
         <h1>Oscar Jimenez</h1>
         <ul>
-            <li href="#about">About</li>
-            <li href="#portfolio">Portfolio</li>
-            <li href="#contact">Contact</li>
+            <a href="#about"><li>About</li></a>
+            <a href="#portfolio"><li>Portfolio</li></a>
+            <a href="#contact"><li>Contact</li></a>
         </ul>
      </div>
 </div>
