--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="nav">
         <h1>Oscar Jimenez</h1>
         <ul>
-            <a href="#about"><li>About</li></a>
-            <a href="#portfolio"><li>Portfolio</li></a>
-            <a href="#contact"><li>Contact</li></a>
+            <a href="index.html"><li>About</li></a>
+            <a href="portfolio.html"><li>Portfolio</li></a>
+            <a href="contact.html"><li>Contact</li></a>
         </ul>
      </div>
 </div>
