--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,9 @@
     <div class="nav">
         <h1>Oscar Jimenez</h1>
         <ul>
-            <a href="#about"><li>About</li></a>
-            <a href="#portfolio"><li>Portfolio</li></a>
-            <a href="#contact"><li>Contact</li></a>
+            <a href="index.html"><li>About</li></a>
+            <a href="portfolio.html"><li>Portfolio</li></a>
+            <a href="contact.html"><li>Contact</li></a>
         </ul>
      </div>
 </div>
@@ -36,12 +36,12 @@
 
         <div class="img-txt">
             <img src="http://lorempixel.com/g/400/200/" alt="Trulli" width="300" height="200">
-            <div class="centered">Centered</div>
+            <div class="centered">Project 1</div>
         </div>
 
         <div class="img-txt">
             <img src="http://lorempixel.com/400/200/" alt="Trulli" width="300" height="200">
-            <div class="centered">Centered</div>
+            <div class="centered">Project 2</div>
         </div>
 
     </div>
@@ -51,12 +51,12 @@
 
         <div class="img-txt">
             <img src="http://lorempixel.com/400/200/sports/" alt="Trulli" width="300" height="200">
-            <div class="centered">Centered</div>
+            <div class="centered">Project 3</div>
         </div>
 
         <div class="img-txt">
             <img src="http://lorempixel.com/400/200/sports/1/" alt="Trulli" width="300" height="200">
-            <div class="centered">Centered</div>
+            <div class="centered">Project 4</div>
         </div>
     
     </div>
@@ -66,7 +66,7 @@
 
         <div class="img-txt">
             <img src="http://lorempixel.com/400/200/" alt="Trulli" width="300" height="200">
-            <div class="centered">Centered</div>
+            <div class="centered">Project 5</div>
         </div>         
     
     </div>
