--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html>
 
-<!-- Contact -->
-<h2>Contact</h2>
-<br>
-<hr>
+<head>    
+    <title>Oscar Jimenez</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
 
-<p>Contact Section</p>
+<!--Navigation-->
+<header>
+
+<div class="nav-header">
+    <div class="nav">
+        <h1>Oscar Jimenez</h1>
+        <ul>
+            <a href="index.html"><li>About</li></a>
+            <a href="portfolio.html"><li>Portfolio</li></a>
+            <a href="contact.html"><li>Contact</li></a>
+        </ul>
+     </div>
+</div>
+
+</header>
+
+<body>
+<!-- Contact -->
+<div class="container">
+
+    <h2>Contact</h2>
+    <br>
+    <hr>
+
+    <form>
+
+        Name<br>
+        <input type="text" class="input-info"><br>
+        Email<br>
+        <input type="email" class="input-info"><br>
+        
+    </form>
+
+    Message<br>
+        <textarea rows="10" cols="" name="message" class="input-info" form="usrform"></textarea>
+    
+    <button id="submit" type="button">Submit</button> 
+
+</div>
+
+<!-- Footer -->
+<div class="footer">
+
+<footer>
+
+<p>Created by: Oscar Jimenez</p>
+
+</footer>
+
+</div>
+
+</body>
 
 </html>
