--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
     <img class="profile-pic" src="images/ID Picture.jpg" width="200px" height="200px" align="left"/>
 
-    <p> I am Oscar Jimenez. I graduated with a degree in Business Administration/Business Law and was intending to become a lawyer. I worked as an analyst for medical device companies before discovering my passion for web-development. I was introduced to programming in my previous rolls and realized the critial thinking and problem solving appealed to me.
+    <p> I am Oscar Jimenez. I graduated with a degree in Business Administration/Business Law and was planning to become a lawyer when I discovered coding. I worked as an analyst for medical device companies before discovering my passion for web-development. I was introduced to programming in my previous rolls and realized the critial thinking and problem solving appealed to me.
     </p>
 
-    <p>I began teaching myself web-developing skills in late 2016 and began taking on freelancing jobs in late 2017. My constant drive to learn new skills fit perfectly with programming. I love learning new skills and perfecting my craft. Programming to me is the perfect career because of the continuous learning involved. It is such a fullfilling career.  
+    <p>I began teaching myself web-developing skills in late 2016 and began taking on freelancing jobs in late 2017. My constant drive to learn new skills fit perfectly with programming. I love learning new skills and perfecting my craft. Programming to me is the perfect career because of the continuous learning involved. It is such a fullfilling career. I decided to join the UCLA Coding Bootcamp to expand my skills and get help with the backend portion of web-development. I look forward to learning new skills and joining a great company where I can not only apply my skills bit also continue my learning.  
     </p>
 
-    <p>I decided to join the UCLA Coding Bootcamp to expand my skills and get help with the backend portion of web-development. I look forward to learning new skills and joining a great company where I can not only apply my skills bit also continue my learning. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    <p>For fun, I like playing video games, board games, Dungeons & Dragons, and adventuring outdoors. I challenge my self physically by competing in obstacle course races, going on long difficult hikes, mountain biking, and boxing. I love to read and learn from people who I look up to. One of my favorite books I have recently read are Extreme Ownership by Jocko Willink and The 4-Hour Workweek by Tim Ferriss. I have been descibed by friends as motivating because I never give up and dont let them give up on goals and challenges set infront of us.  
     </p>
 
 </div>
